apollo-federation/src/sources/connect/snapshots/apollo_federation__sources__connect__url_template__test_parse__expression_missing_closing_bracket.snap
---
source: apollo-federation/src/sources/connect/url_template.rs
expression: "URLTemplate::from_str(\"{$this { x: { y } }\")"
---
Err(
    Error {
        message: "Invalid expression, missing closing }",
        location: 0..19,
    },
)
