apollo-federation/src/sources/connect/snapshots/apollo_federation__sources__connect__url_template__test_parse__path_list-2.snap
---
source: apollo-federation/src/sources/connect/url_template.rs
expression: "URLTemplate::from_str(\"/abc/def\")"
---
Ok(
    URLTemplate {
        base: None,
        path: [
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "abc",
                            location: 1..4,
                        },
                    ),
                ],
            },
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "def",
                            location: 5..8,
                        },
                    ),
                ],
            },
        ],
        query: [],
    },
)
