apollo-federation/src/sources/connect/snapshots/apollo_federation__sources__connect__url_template__test_parse__path_list-3.snap
---
source: apollo-federation/src/sources/connect/url_template.rs
expression: "URLTemplate::from_str(\"/abc/{$args.def}\")"
---
Ok(
    URLTemplate {
        base: None,
        path: [
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "abc",
                            location: 1..4,
                        },
                    ),
                ],
            },
            StringTemplate {
                parts: [
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $args,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "def",
                                                        ),
                                                        range: Some(
                                                            6..9,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            9..9,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..9,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..9,
                                        ),
                                    },
                                },
                            ),
                            location: 6..15,
                        },
                    ),
                ],
            },
        ],
        query: [],
    },
)
